; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_x86.c_kvm_load_segment_selector.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_x86.c_kvm_load_segment_selector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.kvm_segment = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kvm_vcpu*, i32, i32)* @kvm_load_segment_selector to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kvm_load_segment_selector(%struct.kvm_vcpu* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.kvm_vcpu*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.kvm_segment, align 4
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @kvm_get_segment(%struct.kvm_vcpu* %8, %struct.kvm_segment* %7, i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = getelementptr inbounds %struct.kvm_segment, %struct.kvm_segment* %7, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @kvm_set_segment(%struct.kvm_vcpu* %13, %struct.kvm_segment* %7, i32 %14)
  ret void
}

declare dso_local i32 @kvm_get_segment(%struct.kvm_vcpu*, %struct.kvm_segment*, i32) #1

declare dso_local i32 @kvm_set_segment(%struct.kvm_vcpu*, %struct.kvm_segment*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
